2000-12-10    <larus@C745660-A>

	* mem.c (bad_mem_read):
	Printing of instruction bits failed when no instruction at
	address. [From: John Bruce Zuckerman (johnz@cs.tamu.edu)]

	* spim.h display-utils.c mips-syscall.c run.c:
	Handle display of stack better when $sp points to non-word
	boundary. [Matt Simmons, (simmonmt@eng.sun.com)]

	* parser.y:
	Change generated NOP to sll $0, $0, 0 to be consistent. [From:
	Robert Greenfield (rhg@gpfn.sk.ca)]

	* inst.c (i_type_inst_full_word and resolve_a_label_sub):
	Sign-extension fixup code for high 16 bits of lw/sw added fixup
	twice into instruction immediate field. [From: Robert Greenfield
	(rhg@gpfn.sk.ca) and Christian R Ward]

	(produce_immediate):
	Missed optimization of loading immediate with zero high 16
	bits. [From: Robert Greenfield (rhg@gpfn.sk.ca) and Christian R
	Ward]

2000-12-07    <larus@C745660-A>

	* sys-table.c (resolve_a_label_sub):
	Correct binary encoding of negative offsets in branch instructions
	(high 2 bits were 0). [From: Jim Frenzel (jfrenzel@uidaho.edu) and
	others]

	* mips-syscall.c (do_syscall)
	Print single and double precision registers to up to 18 digits,
	not default 6 digits of precision. [From: PIERCE@hood.edu]

2000-12-06    <larus@C745660-A>

	* spim.c (print_all_regs):
	Added spim command to print all registers. [From: Linus Akerlund]

2000-12-05    <larus@C745660-A>

	* Tests/tt.le.s Tests/tt.be.s:
	Fix regression tests to work with stricter parser and changes to spim.

	* Makefile.std Imakefile:
	Change "csh" to an environment variable so shell can be changed.

	* spim.c (console_input_available):
	Comment out code to compile spim under cygwin on windows.

	* spim-utils.c (read_assembly_file):
	Open file as text (for windows).

	* run.c (run_spim):
	LWL failed with gcc (cygwin) because missing parens screwed
	associativity.

2000-12-04    <larus@C745660-A>

	* parser.y scanner.l inst.h tt.be.s tt.le.s
	Validate range of immediate values in non-pseudo instruction and